--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Portfolio | viswasai.me</title>
+    <title>visv</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
@@ -45,7 +45,7 @@
               <span class="icon-menu"></span>
             </button>
             <a href="index.html" class="navbar-brand">
-              viswasai.me
+              visv
               <!-- <img src="assets/img/logo.png" alt=""> -->
             </a>
           </div>
@@ -168,9 +168,9 @@
                   <li><span class="pro-title"> Name </span> <span class="pro-detail">Viswa Sai</span></li>
                   <li><span class="pro-title"> Age </span> <span class="pro-detail">26 Years</span></li>
                   <li><span class="pro-title"> Experience </span> <span class="pro-detail">3 Years</span></li>
-                  <li><span class="pro-title"> Country </span> <span class="pro-detail">Bharath</span></li>
+                  <li><span class="pro-title"> Country </span> <span class="pro-detail">Bharat</span></li>
                   <li><span class="pro-title"> Location </span> <span class="pro-detail">Hyderabad, Telangana</span></li>
-                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">contact@viswasai.me</span></li>
+                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">visvsai@gmail.com</span></li>
                   <!-- <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (00) 123 456 789</span></li>
                   <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li> -->
                 </ul>
@@ -570,13 +570,13 @@
                     <div class="contact-icon">
                       <i class="fa fa-map-marker"></i>
                     </div>
-                    <p>Hyderabad, Telangana, Bharath</p>
+                    <p>Hyderabad, Telangana, Bharat</p>
                   </div>
                   <div class="single-contact">
                     <div class="contact-icon">
                       <i class="fa fa-envelope"></i>
                     </div>
-                    <p><a href="mailto:contact@viswasai.me">contact@viswasai.me</a></p>
+                    <p><a href="mailto:visvsai@gmail.com">visvsai@gmail.com</a></p>
                     <!-- <p><a href="mailto:tomsaulnier@gmail.com">tomsaulnier@gmail.com</a></p> -->
                   </div>
                   <!-- <div class="single-contact">
